<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.RenewalDetail">

    <include layout="@layout/toolbar" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:overScrollMode="never"
        android:padding="@dimen/_10sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/garage_name"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/_12ssp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtGarageName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/border"
                android:padding="@dimen/_10sdp"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/_12ssp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/garage_owner_name"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/_12ssp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtGarageOwnerName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/border"
                android:padding="@dimen/_10sdp"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/_12ssp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/mobile_no"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/_12ssp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/border"
                android:padding="@dimen/_10sdp"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/_12ssp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/Address"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/_12ssp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/border"
                android:padding="@dimen/_10sdp"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/_12ssp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/renewal_request_date"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/_12ssp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtRenewalDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/border"
                android:padding="@dimen/_10sdp"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/_12ssp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/status"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/_12ssp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/border"
                android:padding="@dimen/_10sdp"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/_12ssp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/services"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/_12ssp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="@string/packages"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/_12ssp"
                    android:textStyle="bold" />

            </RelativeLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:nestedScrollingEnabled="false"
                android:overScrollMode="never"
                tools:listitem="@layout/cell_renewaldetail" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


    <LinearLayout
        android:id="@+id/llApproveReject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:orientation="horizontal">

        <RelativeLayout
            android:id="@+id/rlApprove"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_weight="1"
            android:background="@drawable/bkg_button1">

            <TextView
                android:id="@+id/txtApprove"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/approve"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_12ssp"
                android:textStyle="bold" />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:theme="@style/AppTheme.WhiteAccent"
                android:visibility="gone" />

        </RelativeLayout>

        <View
            android:layout_width="@dimen/_5sdp"
            android:layout_height="0dp" />

        <RelativeLayout
            android:id="@+id/rlReject"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_weight="1"
            android:background="@drawable/bkg_button1">

            <TextView
                android:id="@+id/txtReject"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/reject"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_12ssp"
                android:textStyle="bold" />

            <ProgressBar
                android:id="@+id/progressBar1"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:theme="@style/AppTheme.WhiteAccent"
                android:visibility="gone" />

        </RelativeLayout>

    </LinearLayout>


</LinearLayout>