<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/_10sdp"
    android:background="#99000000"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/_5sdp"
        app:cardElevation="@dimen/_3sdp"
        app:cardUseCompatPadding="true">

        <com.channelpartner.utils.TextViewDrawableSize
            android:id="@+id/txtClass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_profile"
            android:drawableRight="@drawable/ic_arror_right"
            android:drawablePadding="@dimen/_10sdp"
            android:drawableTint="@color/colorLightBlack"
            android:padding="@dimen/_10sdp"
            android:text="@string/class_registration"
            android:textSize="@dimen/_12ssp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        app:cardCornerRadius="@dimen/_5sdp"
        app:cardElevation="@dimen/_3sdp"
        app:cardUseCompatPadding="true">

        <com.channelpartner.utils.TextViewDrawableSize
            android:id="@+id/txtTeacher"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_income"
            android:drawableRight="@drawable/ic_arror_right"
            android:drawablePadding="@dimen/_10sdp"
            android:drawableTint="@color/colorLightBlack"
            android:padding="@dimen/_10sdp"
            android:text="@string/teacher_registration"
            android:textSize="@dimen/_12ssp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        app:cardCornerRadius="@dimen/_5sdp"
        app:cardElevation="@dimen/_3sdp"
        app:cardUseCompatPadding="true">

        <com.channelpartner.utils.TextViewDrawableSize
            android:id="@+id/txtStudent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_chart"
            android:drawableRight="@drawable/ic_arror_right"
            android:drawablePadding="@dimen/_10sdp"
            android:drawableTint="@color/colorLightBlack"
            android:padding="@dimen/_10sdp"
            android:text="@string/student_registration"
            android:textSize="@dimen/_12ssp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        app:cardCornerRadius="@dimen/_5sdp"
        app:cardElevation="@dimen/_3sdp"
        app:cardUseCompatPadding="true">

        <com.channelpartner.utils.TextViewDrawableSize
            android:id="@+id/txtCareerExpert"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_wallet"
            android:drawableRight="@drawable/ic_arror_right"
            android:drawablePadding="@dimen/_10sdp"
            android:drawableTint="@color/colorLightBlack"
            android:padding="@dimen/_10sdp"
            android:text="@string/career_expert_registration"
            android:textSize="@dimen/_12ssp" />
    </androidx.cardview.widget.CardView>
</LinearLayout>